--- a/cadastrar.html
+++ b/cadastrar.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Restaurante do Veneno - Cadastrar produtos</title>
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script>
     let produtos = []
     
@@ -14,24 +14,20 @@
         let descricao = document.getElementById("descricao").value.trim()
 
         if (nome == "" || nome.length < 3) {
-          //alert("Preencha o nome do produto")
           document.getElementById("erro-nome").style.display = "block"
           return false
         }
         if (preco == "" || preco <= 0){
-          //alert("Preencha o preço do produto")
           document.getElementById("erro-preco").style.display = "block"
           return false
         }
 
-        //cria o objeto json do novo produto
         let novoProduto = {
           "nome": nome,
           "preco": preco,
           "descricao": descricao
         }
 
-        //adiciona o novo produto à lista de produtos
         produtos.push(novoProduto)
         console.log(produtos)
 
@@ -41,30 +37,28 @@
         }, 1000)
         limparForm()
 
-        //recarregar a lista de produtos
         carregarProdutos()
 
-        return false; // Não vai enviar o formulário
+        return false;
     }
 
     function carregarProdutos(){
-      //passar pela lista de produtos
+      let tbody = document.getElementsByTagName("tbody")[0]
+      tbody.innerHTML = "" // Clear existing rows
       for(let contador = 0; contador <= produtos.length - 1; contador++){
-        //desenhar uma linha na tabela
         let produto = produtos[contador]
 
         let linha = document.createElement("tr")
-        linha.innerHTML = `<tr>
+        linha.innerHTML = `
           <td>${produto.nome}</td>
           <td>R$ ${produto.preco}</td>
           <td>${produto.descricao}</td>
           <td>
-            <button>Alterar</button>
-            <button>Excluir</button>
+            <button class="btn btn-sm btn-warning">Alterar</button>
+            <button class="btn btn-sm btn-danger">Excluir</button>
           </td>
-        </tr>`
+        `
 
-        let tbody = document.getElementsByTagName("tbody")[0]
         tbody.appendChild(linha)
       }
     }
@@ -81,46 +75,51 @@
     }
   </script>
 </head>
-<body>
-  <a href="index.html">Voltar</a>
-  <h1>Cadastro de Produtos</h1>
+<body class="bg-light">
+  <div class="container mt-4">
+    <a href="index.html" class="btn btn-link">Voltar</a>
+    <h1 class="mb-4">Cadastro de Produtos</h1>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Nome</th>
-        <th>Preço</th>
-        <th>Descrição</th>
-        <th>Ações</th>
-      </tr>
-    </thead>
-    <tbody>
-      
-    </tbody>
-  </table>
+    <div class="table-responsive">
+      <table class="table table-striped table-bordered">
+        <thead class="table-dark">
+          <tr>
+            <th>Nome</th>
+            <th>Preço</th>
+            <th>Descrição</th>
+            <th>Ações</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+    </div>
 
-  <form id="form-cadastro" method="post" onsubmit="return salvar()">
-    <div class="form-grupo">
-      <label for="nome">Nome do Produto</label>
-      <input type="text" name="nome" id="nome" maxlength="150" onkeydown="limparErro('erro-nome')" />
-      <div class="erro" id="erro-nome">Preencha o nome do produto</div>
-    </div>
-    <div class="form-grupo">
-      <label for="preco">Preço</label>
-      <input type="number" name="preco" id="preco" step="0.1" onkeydown="limparErro('erro-preco')" />
-      <div class="erro" id="erro-preco">Preencha o preço</div>
-    </div>
-    <div class="form-grupo">
-      <label for="descricao">Descrição (opcional)</label>
-      <textarea name="descricao" id="descricao" rows="5" cols="40"></textarea>
-    </div>
-    <div class="form-grupo">
-      <input type="submit" value="Salvar" />
-    </div>
-  </form>
+    <form id="form-cadastro" class="mt-4" onsubmit="return salvar()">
+      <div class="mb-3">
+        <label for="nome" class="form-label">Nome do Produto</label>
+        <input type="text" class="form-control" name="nome" id="nome" maxlength="150" onkeydown="limparErro('erro-nome')" />
+        <div class="invalid-feedback" id="erro-nome" style="display: none;">Preencha o nome do produto</div>
+      </div>
+      <div class="mb-3">
+        <label for="preco" class="form-label">Preço</label>
+        <input type="number" class="form-control" name="preco" id="preco" step="0.1" onkeydown="limparErro('erro-preco')" />
+        <div class="invalid-feedback" id="erro-preco" style="display: none;">Preencha o preço</div>
+      </div>
+      <div class="mb-3">
+        <label for="descricao" class="form-label">Descrição (opcional)</label>
+        <textarea class="form-control" name="descricao" id="descricao" rows="5"></textarea>
+      </div>
+      <div class="mb-3">
+        <button type="submit" class="btn btn-primary">Salvar</button>
+      </div>
+    </form>
 
-  <div id="mensagem">
-    <p>Produto cadastrado com sucesso.</p>
+    <div id="mensagem" class="alert alert-success position-fixed top-50 start-50 translate-middle" style="display: none; z-index: 1000;">
+      Produto cadastrado com sucesso.
+    </div>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
