--- a/cadastrar.html
+++ b/cadastrar.html
@@ -57,6 +57,30 @@
         return false;
     }
 
+    function excluir(id){
+      //busca o produto no vetor para excluir
+      for(let contador = 0; contador <= produtos.length - 1; contador++){
+        let produto = produtos[contador]
+        if (produto.id == id){ //se encontrou o produto buscado
+          produtos.splice(contador, 1) //remove o elemento do vetor
+          break
+        }
+      }
+      carregarProdutos()
+    }
+
+    function alterar(id){
+      //busca o produto no vetor para preencher o form
+      for(let contador = 0; contador <= produtos.length - 1; contador++){
+        let produto = produtos[contador]
+        if (produto.id == id){ //se encontrou o produto buscado
+          document.getElementById("nome").value = produto.nome
+          document.getElementById("preco").value = produto.preco
+          document.getElementById("descricao").value = produto.descricao
+        }
+      }      
+    }
+
     function carregarProdutos(){
       let tbody = document.getElementsByTagName("tbody")[0]
       tbody.innerHTML = "" // Clear existing rows
@@ -69,8 +93,14 @@
           <td>R$ ${produto.preco}</td>
           <td>${produto.descricao}</td>
           <td>
-            <button class="btn btn-sm btn-warning">Alterar</button>
-            <button class="btn btn-sm btn-danger">Excluir</button>
+            <button class="btn btn-sm btn-warning" 
+                    onclick="alterar(${produto.id})">
+              Alterar
+            </button>
+            <button class="btn btn-sm btn-danger" 
+                  onclick="excluir(${produto.id})">
+              Excluir
+            </button>
           </td>
         `
 
