--- a/cadastrar.html
+++ b/cadastrar.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script>
     let produtos = []
+    let idAlterado = null //guarda o id do produto que está sendo alterado
 
     function getProximoId() {
       if (produtos.length > 0){
@@ -34,17 +35,31 @@
           return false
         }
 
-        let proximoId = getProximoId()
+        //se não tem idAlterado, então é um novo produto
+        if (idAlterado == null){ 
+          let proximoId = getProximoId()
 
-        let novoProduto = {
-          "id": proximoId, 
-          "nome": nome,
-          "preco": preco,
-          "descricao": descricao
+          let novoProduto = {
+            "id": proximoId, 
+            "nome": nome,
+            "preco": preco,
+            "descricao": descricao
+          }
+
+          produtos.push(novoProduto)
+          console.log(produtos)
+        }else{ //tem um produto sendo alterado 
+          //procura o produto no vetor e altera-o
+          for(let contador = 0; contador <= produtos.length - 1; contador++){
+            let produto = produtos[contador]
+            if (produto.id == idAlterado){
+              produto.nome = nome
+              produto.preco = preco
+              produto.descricao = descricao
+              break //depois de alterar o produto, nao precisa buscar
+            }
+          }
         }
-
-        produtos.push(novoProduto)
-        console.log(produtos)
 
         document.getElementById("mensagem").style.display = "flex"
         setTimeout(function(){
@@ -77,6 +92,7 @@
           document.getElementById("nome").value = produto.nome
           document.getElementById("preco").value = produto.preco
           document.getElementById("descricao").value = produto.descricao
+          idAlterado = produto.id //define que o produto será alterado
         }
       }      
     }
