--- a/cadastrar.html
+++ b/cadastrar.html
@@ -69,7 +69,10 @@
 
         carregarProdutos()
 
-        return false;
+        //zera a variável que guarda o produto que está sendo alterado
+        idAlterado = null 
+
+        return false; //bloqueia o onsubmit para não atualizar a página
     }
 
     function excluir(id){
@@ -134,6 +137,11 @@
     function limparErro(id){
       document.getElementById(id).style.display = "none"
     }
+
+    function adicionar(){
+      limparForm()
+      idAlterado = null
+    }
   </script>
 </head>
 <body class="bg-light">
@@ -141,6 +149,7 @@
     <a href="index.html" class="btn btn-link">Voltar</a>
     <h1 class="mb-4">Cadastro de Produtos</h1>
 
+    <button class="btn btn-primary" onclick="adicionar()">Adicionar</button>
     <div class="table-responsive">
       <table class="table table-striped table-bordered">
         <thead class="table-dark">
