--- a/cadastrar.html
+++ b/cadastrar.html
@@ -142,9 +142,24 @@
       limparForm()
       idAlterado = null
     }
+
+    function getProdutos(){
+      fetch("http://localhost:3000/clientes")
+      .then(response => {
+        return response.json()  
+      })
+      .then(data => {
+        //pega os dados do back e armazena na variável "produtos"
+        produtos = data
+        carregarProdutos()
+      })
+      .catch(error => {
+        alert("Deu erro")
+      })
+    }
   </script>
 </head>
-<body class="bg-light">
+<body class="bg-light" onload="getProdutos()">
   <div class="container mt-4">
     <a href="index.html" class="btn btn-link">Voltar</a>
     <h1 class="mb-4">Cadastro de Produtos</h1>
