tela de pedidos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
-    <a href="cadastrar.html">Cadastrar</a>
+    <a href="cadastrar.html">Cadastrar produtos</a>
+    <br />
+    <a href="pedido.html">Fazer pedido</a>
+
 </body>
 </html>
